# spotify-clone

./: app.py  models.py  pyproject.toml  routes.py  utils.py
instance/: spotify_clone.db
static/: styles.css
templates/: add_album.html  add_artist.html  add_playlist.html  add_song.html  admin.html  album.html  artist.html  home.html  login.html  playlist.html  profile.html  register.html  template.html
